# Graduation

./: .gitignore  README.md  pruning_analysis.csv  剪枝策略想法.md  导航网格资源受限最短路径算法研究开题报告.docx  蔡以恒开题报告.docx  计算机+软件工程+信息安全+人工智能，开题报告和文献综述模板（论文类型）.doc
2026届/: 附件1.2026届计算机学院本科毕设选题选导清单.xls
2026届/附件3.2026届浙江大学计算机学院毕业论文（设计）开题报告模板/: 工业设计＋产品设计，开题报告模板.doc  计算机+软件工程+信息安全+人工智能，开题报告和中期报告模版（设计类型）.doc  计算机+软件工程+信息安全+人工智能，开题报告和文献综述模板（论文类型）.doc
2026届/附件4.2026届浙江大学计算机学院毕业论文（设计）模板/: 2026届浙江大学工业设计、产品设计本科生毕业设计模板.doc  2026届浙江大学计算机、软件工程、信息安全、人工智能本科生毕业论文（设计）模板.doc
2026届/附件5.规则性文件及相关申请表/: 2：计算机学院毕业论文（设计）工作实施细则.doc  3：浙江大学本科生涉密学位论文申请暨保密协议书.docx  4：计算机学院毕业论文（设计）更换导师申请表.doc  5：《浙江大学本科生申请赴外单位进行毕业论文（设计）审批表》.doc  ~$计算机学院毕业论文（设计）工作实施细则.doc
NavMeshERCA_Experiment/: CMakeLists.txt  EXPERIMENT_REPORT.md  GraphConverter.cpp  GraphConverter.h  GraphConverter_en.cpp  README.md  SCREENSHOT_GUIDE.md  generate_large_navmesh.cpp  main.cpp  main_complex.cpp  main_en.cpp  run_with_screenshots.bat
ThesisRCSPP/: CMakeLists.txt  result.md
ThesisRCSPP/app/: ablation_study.cpp  expanded_benchmark.cpp  main.cpp  navmesh_benchmark.cpp  pruning_analysis.cpp  run_benchmark.cpp  smart_benchmark.cpp
ThesisRCSPP/docs/: implementation_steps.md  optimization_strategies.md
ThesisRCSPP/include/algorithm/: Dijkstra.h  ERCA.h  Normalizer.h  Pulse.h
ThesisRCSPP/include/benchmark/: Benchmark.h
ThesisRCSPP/include/frontier/: AVLTree.h  ParetoFrontier.h
ThesisRCSPP/include/graph/: Graph.h  NavMeshConverter.h  Roadmap.h
ThesisRCSPP/results/: ablation_results.csv
ThesisRCSPP/src/algorithm/: Dijkstra.cpp  ERCA.cpp  Normalizer.cpp  Pulse.cpp
ThesisRCSPP/src/benchmark/: Benchmark.cpp
ThesisRCSPP/src/frontier/: AVLTree.cpp  ParetoFrontier.cpp
ThesisRCSPP/src/graph/: Graph.cpp  NavMeshConverter.cpp  Roadmap.cpp
word插件/: xkonglong.com.cer  小恐龙公文助手3.7.0.0低权限安装版.msi  手工导入证书指南.docx  更新历史.txt  首次安装请导入证书.bat
